--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,47 +1,28 @@
 .button {
-    display: block;
-    margin: 8px 3px 0 auto;
     width: 150px;
     height: 30px;
+    border-radius: 5px;
     background-color: $main-color;
-    border-radius: 5px;
     border: none;
+    color: #ffffff;
     font-size: 12px;
-    line-height: 1.2;
     font-weight: 500;
     text-transform: uppercase;
-    color: #ffffff;
-}
-
-.button_main {
-    width: 300px;
-    height: 50px;
-    background-color: #c70101;
-    border-radius: 5px;
-}
-
-.feed-button {
-    width: 300px;
-    height: 55px;
-    background-color: #c70101;
-    border-radius: 5px;
-    border: none;
-    font-size: 16px;
-    line-height: 1.2;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: #ffffff;
-}
-
-.button__mini {
-    width: 131px;
-    height: 40px;
-    background-color: #c70101;
-    border-radius: 5px;
-    font-size: 14px;
-    line-height: 1.2;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: #ffffff;
-
+    &_main {
+        margin-top: 67px;
+        width: 300px;
+        height: 50px;
+        font-size: 16px;
+    }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        color: #ffffff;
+        font-size: 16px;
+    }
+    &_mini {
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
+    }
 }
