--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -9,27 +9,28 @@
         }
     }
     &__official {
-        font-size: 12px;
-        line-height: 1.2;
-        font-weight: 500;
         color: #ffffff;
+        font-size: 12px;
+        font-weight: 500;
         text-align: center;
         span {
             display: block;
             font-size: 18px;
-            font-weight: 700;
         }
     }
     &__phone {
         display: block;
-        font-size: 18px;
-        line-height: 1.2;
-        font-weight: 700;
         color: #ffffff;
+        font-size: 18px;
+        font-weight: 700;
         &:hover {
-            color:#ffffff;
+            color: #fff;
             text-decoration: none;
         }
-
+    }
+    &__contacts {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
     }
 }
