--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
     min-height: 650px;
     padding: 21px 0 93px 0;
-    background: url(../../img/main.jpg) center (center/cover) no-repeat;
+    background: url("../img/main.jpg") center (center/cover) no-repeat;
     &__wrapper {
         display: flex;
         flex-direction: column;
@@ -9,22 +9,22 @@
         margin-top: 90px;
     }
     &__header {
+        color: #ffffff;
         font-size: 42px;
-        line-height: 1.2;
         font-weight: 700;
         text-transform: uppercase;
-        color: #ffffff;
+        line-height: 42px;
     }
     &__subheader {
         margin-top: 17px;
+        color: #ffffff;
         font-size: 24px;
-        line-height: 1.2;
+        line-height: 24px;
         font-weight: 500;
         text-transform: uppercase;
-        color: #ffffff;
     }
     &__icons {
-        margin-top: 67px;
+        margin-top: 65px;
         width: 425px;
         display: flex;
         justify-content: space-between;
@@ -42,15 +42,14 @@
         }
     }
     &__link {
-        margin-top: 18px;
-        font-size: 16px;
-        line-height: 1.2;
-        font-weight: 500;
         color: #ffffff;
+        font-size: 16px;
+        font-weight: 500;
+        margin-top: 18px;
         a {
             color: #ffffff;
-            text-decoration: none;
-            border-bottom: 1px solid #fff;
+            text-transform: uppercase;
+            text-decoration: underline;
         }
     }
 }
