--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,25 +2,17 @@
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
-
 .container {
     max-width: 950px;
     margin: 0 auto;
 }
-
-// .title {
-//     text-transform: uppercase;
-//     font-size: 36px;
-//     line-height: 1.2;
-//     font-weight: 700;
-//     color: #ffffff;
-// }
-
-@import 'blocks/_promo';
-@import 'blocks/_header';
-@import 'blocks/_buttons';
-@import 'blocks/_benefits';
-@import 'blocks/_consultation';
-@import 'blocks/_forms';
-@import 'blocks/_carousel';
-@import 'blocks/_catalog';
+@import 'blocks/promo';
+@import 'blocks/header.scss';
+@import 'blocks/buttons';
+@import 'blocks/advantages';
+@import 'blocks/titles';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/feed';
