остановился на скрипте

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,7 @@
     max-width: 950px;
     margin: 0 auto;
 }
+ 
 @import 'blocks/promo';
 @import 'blocks/header.scss';
 @import 'blocks/buttons';
@@ -17,3 +18,4 @@
 @import 'blocks/catalog';
 @import 'blocks/feed';
 @import 'blocks/footer';
+@import 'blocks/modal';
